--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,12 +1,12 @@
 <div class="header-wrapper" fxLayout="row" fxLayoutAlign="space-between center"  fxFlexAlign="center">
-  <div class="left-header" fxLayout="row" fxLayoutAlign="space-between center" fxLayoutGap="20px">
+  <div class="left-header" fxLayout="row" fxLayout.xs="column" fxLayoutAlign="space-between center" fxLayoutGap="20px">
      <div class="logo" fxLayout="row" fxLayoutAlign="center center"  fxFlexAlign="center"  style="background: blue;width: 150px;height: 30px;text-align: center;border-radius: 5px;">Logo</div> 
-      <div class="header-menu">
+      <div class="header-menu" >
           <nav class="navbar">
             <ul class="navigation-list" fxLayout="row" fxLayoutGap="15px" >
-               <li><a [routerLink]="['/dashboard']" routerLinkActive="active"  *ngIf="isLoggedIn">Dashboard</a></li>
-               <li><a [routerLink]="['/home']" routerLinkActive="active"  *ngIf="isLoggedIn">Home</a></li>
-               <li><a [routerLink]="['/product']" routerLinkActive="active"  *ngIf="isLoggedIn">Product</a></li> 
+               <li *ngIf="(isAuthenticated | async)"><a [routerLink]="['/dashboard']" routerLinkActive="active">Dashboard</a></li>
+               <li *ngIf="(isAuthenticated | async)"><a [routerLink]="['/home']" routerLinkActive="active"  >Home</a></li>
+               <li *ngIf="(isAuthenticated | async)"><a [routerLink]="['/product']" routerLinkActive="active"  >Product</a></li> 
             </ul>
           </nav>
       </div>
@@ -15,8 +15,8 @@
     <div class="right-navigation">
       <nav class="right-navigation-list">
         <ul class="right-nav-listing" fxLayout="row" fxLayoutGap="10px">
-           <li><a [routerLink]="['/login']" routerLinkActive="active"  *ngIf="!isLoggedIn">Login</a></li>
-           <li><a [routerLink]="['/login']" routerLinkActive="active" (click)="onSignOut()"  *ngIf="isLoggedIn">Logout</a></li>
+           <li *ngIf="!(isAuthenticated | async)"><a [routerLink]="['/login']" routerLinkActive="active">Login</a></li>
+           <li *ngIf="(isAuthenticated | async)"><a  (click)="onSignOut()"  >Logout</a></li>
            <!-- <li><a href="javascript:void(0)">Sign Up</a></li> -->
         </ul>
       </nav>
